--- a/package.json
+++ b/package.json
@@ -39,11 +39,15 @@
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.10",
     "@types/jest": "^26.0.20",
+    "@types/nodemailer": "^6.4.0",
     "jest": "^26.6.3",
     "semantic-release": "^17.3.6",
     "semantic-release-gitmoji": "^1.3.4",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "update-template": "^1.3.1"
+  },
+  "dependencies": {
+    "nodemailer": "^6.4.17"
   }
 }
